fix hero buttons position and visibility on mobile

--- a/css/landlord-radar-6547bc.webflow.css
+++ b/css/landlord-radar-6547bc.webflow.css
@@ -701,6 +701,11 @@
   }
 
   .hero-container {
+    padding-top: 100px;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
     text-align: center;
   }
 
@@ -727,6 +732,7 @@
   }
 
   .heading.hero-heading {
+    position: static;
     top: 75.438px;
   }
 
@@ -737,6 +743,10 @@
     margin-right: auto;
     margin-left: auto;
     text-align: center;
+  }
+
+  .button-full.second {
+    margin-top: 20px;
   }
 
   .button-ghost {
@@ -819,7 +829,7 @@
   }
 
   .div-block-12 {
-    position: absolute;
+    position: static;
     left: 73px;
     top: 183px;
     display: -webkit-box;
@@ -833,6 +843,10 @@
     -webkit-flex-direction: column;
     -ms-flex-direction: column;
     flex-direction: column;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     -webkit-box-align: center;
     -webkit-align-items: center;
     -ms-flex-align: center;
